# hanna

./: Cargo.toml  LICENSE  README.md  build.rs  run_tests_with_coverage.sh
rtl/lib_1/: cfg_design_1.vhd  cfg_design_2.vhd  cfg_design_3.vhd  cfg_testbench_1.vhd  cfg_testbench_2.vhd  cfg_testbench_3.vhd  design_1.vhd  design_1_rtl.vhd  design_1_struct.vhd  design_1_structure.vhd  design_2.vhd  design_2_rtl.vhd  package_1.vhd  testbench.vhd
rtl/lib_2/: design_1.vhd  design_2.vhd  package_20.vhd  package_20_body.vhd  package_21.vhd  package_22.vhd
rtl/lib_v/: mem_1.v  mem_2.v
sim/: runme.zsh  runme_2.zsh  runme_3.zsh  waveform.gtkw
src/: cli.rs  lib.rs  main.rs
src/classes/: architecture.rs  aux_functions.rs  configuration.rs  configuration_instance.rs  constants.rs  design.rs  element.rs  entity.rs  instance.rs  library.rs  mod.rs  package.rs  re_definitions.rs  tool_config.rs  tool_lang_config.rs
tomls/: libraries.toml
tomls/tools/: echo.toml  ghdl.toml
