build = "build.rs"

[package]
name = "hanna"
version = "0.9.0"
edition = "2021"
authors = ["Heiko Braun"]
description = "VHDL analyzer and compile script generator"
readme = "README.md"
repository = "https://github.com/HeikoBraun/hanna"
license = "MIT"
keywords = ["VHDL", "compile", "script", "filelist"]

[dependencies]
clap = { version = "4.5.4", features = ["derive", "cargo"] }
env_logger = "0.11.3"
log = "0.4.21"
regex = "1.10.4"
toml = "0.8.12"
once_cell = "1.19.0"
glob = "0.3.1"
encoding = "0.2"
serde_json = "1.0.116"

[build-dependencies]
clap = { version = "4.5.4", features = ["derive", "cargo"] }
clap_complete = "*"

